0026128: Visualization, TKOpenGl - fix misprint in external GLX context initialization

OpenGl_Window, GLX - push warning about missing caps in window Visual.
Allow initialization of alien GLX context.

Correction of misprinting